--- a/src/ui/widgets/widgets/StreamSettingsWidget.ui
+++ b/src/ui/widgets/widgets/StreamSettingsWidget.ui
@@ -881,7 +881,7 @@
        </item>
        <item row="1" column="0" colspan="2">
         <widget class="QCheckBox" name="allowInsecureCB">
-         <property name="enabled">
+         <property name="checked">
           <bool>false</bool>
          </property>
          <property name="toolTip">
