add xtls-rprx-vision flow.

--- a/src/plugins/protocols/ui/outbound/vless.ui
+++ b/src/plugins/protocols/ui/outbound/vless.ui
@@ -85,6 +85,11 @@
      </item>
      <item>
       <property name="text">
+       <string>xtls-rprx-vision</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
        <string notr="true">xtls-rprx-splice</string>
       </property>
      </item>
