Add xtls-rprx-vision ui

--- a/src/plugins/protocols/ui/outbound/vless.ui
+++ b/src/plugins/protocols/ui/outbound/vless.ui
@@ -100,6 +100,11 @@
      </item>
      <item>
       <property name="text">
+       <string notr="true">xtls-rprx-vision</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
        <string notr="true">xtls-rprx-splice-udp443</string>
       </property>
      </item>
@@ -111,6 +116,11 @@
      <item>
       <property name="text">
        <string notr="true">xtls-rprx-origin-udp443</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string notr="true">xtls-rprx-vision-udp443</string>
       </property>
      </item>
     </widget>
