--- a/src/ui/widgets/widgets/StreamSettingsWidget.ui
+++ b/src/ui/widgets/widgets/StreamSettingsWidget.ui
@@ -926,9 +926,6 @@
          </property>
         </widget>
        </item>
-       <item row="8" column="1">
-        <widget class="QLineEdit" name="alpnTxt"/>
-       </item>
        <item row="8" column="0">
         <widget class="QLabel" name="label_14">
          <property name="text">
@@ -990,6 +987,48 @@
          <property name="text">
           <string>Certificates</string>
          </property>
+        </widget>
+       </item>
+       <item row="8" column="1">
+        <widget class="QGroupBox" name="groupBox">
+         <property name="autoFillBackground">
+          <bool>false</bool>
+         </property>
+         <property name="title">
+          <string/>
+         </property>
+         <property name="flat">
+          <bool>false</bool>
+         </property>
+         <property name="checkable">
+          <bool>false</bool>
+         </property>
+         <widget class="QCheckBox" name="alpnH2CB">
+          <property name="geometry">
+           <rect>
+            <x>0</x>
+            <y>10</y>
+            <width>82</width>
+            <height>24</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>h2</string>
+          </property>
+         </widget>
+         <widget class="QCheckBox" name="alpnHttpCB">
+          <property name="geometry">
+           <rect>
+            <x>80</x>
+            <y>10</y>
+            <width>82</width>
+            <height>24</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>http/1.1</string>
+          </property>
+         </widget>
         </widget>
        </item>
       </layout>
