--- a/src/ui/widgets/widgets/StreamSettingsWidget.ui
+++ b/src/ui/widgets/widgets/StreamSettingsWidget.ui
@@ -6,16 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>465</width>
-    <height>402</height>
+    <width>583</width>
+    <height>475</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Stream Settings Widget</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="1">
+   <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>2</horstretch>
+       <verstretch>2</verstretch>
+      </sizepolicy>
+     </property>
      <property name="currentIndex">
       <number>1</number>
      </property>
@@ -852,186 +858,397 @@
       <attribute name="title">
        <string>TLS Settings</string>
       </attribute>
-      <layout class="QFormLayout" name="formLayout">
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_21">
-         <property name="text">
-          <string>Security Type</string>
-         </property>
-        </widget>
+      <widget class="QLabel" name="label_21">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>9</y>
+         <width>82</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Security Type</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="securityTypeCB">
+       <property name="geometry">
+        <rect>
+         <x>300</x>
+         <y>9</y>
+         <width>225</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string notr="true">None</string>
+        </property>
        </item>
-       <item row="0" column="1">
-        <widget class="QComboBox" name="securityTypeCB">
-         <item>
-          <property name="text">
-           <string notr="true">None</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string notr="true">TLS</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string notr="true">XTLS</string>
-          </property>
-         </item>
-        </widget>
+       <item>
+        <property name="text">
+         <string notr="true">TLS</string>
+        </property>
        </item>
-       <item row="2" column="0">
-        <widget class="QCheckBox" name="allowInsecureCB">
-         <property name="toolTip">
-          <string>AllowInsecure is insecure, do not allow insecure.</string>
-         </property>
-         <property name="text">
-          <string>Allow Insecure Certificates</string>
-         </property>
-         <property name="checked">
-          <bool>false</bool>
-         </property>
-        </widget>
+       <item>
+        <property name="text">
+         <string>Reality</string>
+        </property>
        </item>
-       <item row="3" column="0">
-        <widget class="QCheckBox" name="enableSessionResumptionCB">
-         <property name="text">
-          <string>Enable Session Resumption</string>
-         </property>
-         <property name="checked">
-          <bool>false</bool>
-         </property>
-        </widget>
+       <item>
+        <property name="text">
+         <string notr="true">XTLS</string>
+        </property>
        </item>
-       <item row="4" column="0">
-        <widget class="QCheckBox" name="disableSystemRoot">
-         <property name="text">
-          <string>Disable System Root Certificates</string>
-         </property>
-        </widget>
+      </widget>
+      <widget class="QCheckBox" name="allowInsecureCB">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>47</y>
+         <width>186</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="toolTip">
+        <string>AllowInsecure is insecure, do not allow insecure.</string>
+       </property>
+       <property name="text">
+        <string>Allow Insecure Certificates</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="enableSessionResumptionCB">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>78</y>
+         <width>194</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Enable Session Resumption</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pinnedPeerCertificateChainSha256Btn">
+       <property name="geometry">
+        <rect>
+         <x>100</x>
+         <y>380</y>
+         <width>425</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Open pinnedPeerCertificateChainSha256 Editor</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="openCertEditorBtn">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>336</y>
+         <width>401</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="toolTip">
+        <string notr="true">Not Implemented</string>
+       </property>
+       <property name="text">
+        <string>Open Certificate Editor</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_9">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>336</y>
+         <width>69</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Certificates</string>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="disableSystemRoot">
+       <property name="geometry">
+        <rect>
+         <x>300</x>
+         <y>78</y>
+         <width>221</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Disable System Root Certificates</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_34">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>300</y>
+         <width>104</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>uTLS(fingerprint)</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="fingerprintCB">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>300</y>
+         <width>401</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string/>
+        </property>
        </item>
-       <item row="15" column="0" colspan="2">
-        <widget class="QPushButton" name="pinnedPeerCertificateChainSha256Btn">
-         <property name="text">
-          <string>Open pinnedPeerCertificateChainSha256 Editor</string>
-         </property>
-        </widget>
+       <item>
+        <property name="text">
+         <string>chrome</string>
+        </property>
        </item>
-       <item row="6" column="1">
-        <widget class="QLineEdit" name="serverNameTxt"/>
+       <item>
+        <property name="text">
+         <string>firefox</string>
+        </property>
        </item>
-       <item row="6" column="0">
-        <widget class="QLabel" name="label_6">
-         <property name="text">
-          <string>Server Address (SNI)</string>
-         </property>
-        </widget>
+       <item>
+        <property name="text">
+         <string>safari</string>
+        </property>
        </item>
-       <item row="8" column="0">
-        <widget class="QLabel" name="label_14">
-         <property name="text">
-          <string>ALPN</string>
-         </property>
-        </widget>
+       <item>
+        <property name="text">
+         <string>ios</string>
+        </property>
        </item>
-       <item row="10" column="1">
-        <widget class="QComboBox" name="fingerprintCB">
-         <item>
-          <property name="text">
-           <string/>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>chrome</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>firefox</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>safari</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>randomized</string>
-          </property>
-         </item>
-        </widget>
+       <item>
+        <property name="text">
+         <string>android</string>
+        </property>
        </item>
-       <item row="10" column="0">
-        <widget class="QLabel" name="label_34">
-         <property name="text">
-          <string>uTLS(fingerprint)</string>
-         </property>
-        </widget>
+       <item>
+        <property name="text">
+         <string>edge</string>
+        </property>
        </item>
-       <item row="12" column="1">
-        <widget class="QPushButton" name="openCertEditorBtn">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <property name="toolTip">
-          <string notr="true">Not Implemented</string>
-         </property>
-         <property name="text">
-          <string>Open Certificate Editor</string>
-         </property>
-        </widget>
+       <item>
+        <property name="text">
+         <string>randomized</string>
+        </property>
        </item>
-       <item row="12" column="0">
-        <widget class="QLabel" name="label_9">
-         <property name="text">
-          <string>Certificates</string>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="1">
-        <widget class="QGroupBox" name="groupBox">
-         <property name="autoFillBackground">
-          <bool>false</bool>
-         </property>
-         <property name="title">
-          <string/>
-         </property>
-         <property name="flat">
-          <bool>false</bool>
-         </property>
-         <property name="checkable">
-          <bool>false</bool>
-         </property>
-         <widget class="QCheckBox" name="alpnH2CB">
-          <property name="geometry">
-           <rect>
-            <x>0</x>
-            <y>10</y>
-            <width>82</width>
-            <height>24</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>h2</string>
-          </property>
-         </widget>
-         <widget class="QCheckBox" name="alpnHttpCB">
-          <property name="geometry">
-           <rect>
-            <x>80</x>
-            <y>10</y>
-            <width>82</width>
-            <height>24</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>http/1.1</string>
-          </property>
-         </widget>
-        </widget>
-       </item>
-      </layout>
+      </widget>
+      <widget class="QLabel" name="label_14">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>267</y>
+         <width>33</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>ALPN</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_6">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>110</y>
+         <width>123</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Server Address (SNI)</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="serverNameTxt">
+       <property name="geometry">
+        <rect>
+         <x>154</x>
+         <y>110</y>
+         <width>401</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_35">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>142</y>
+         <width>68</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>PublickKey</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="publicKeyTxt">
+       <property name="geometry">
+        <rect>
+         <x>153</x>
+         <y>142</y>
+         <width>401</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="toolTip">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;for reality&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="locale">
+        <locale language="English" country="UnitedStates"/>
+       </property>
+      </widget>
+      <widget class="QGroupBox" name="groupBox">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>252</y>
+         <width>401</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>24</height>
+        </size>
+       </property>
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
+       <property name="title">
+        <string/>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
+       </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
+       <widget class="QCheckBox" name="alpnH2CB">
+        <property name="geometry">
+         <rect>
+          <x>30</x>
+          <y>13</y>
+          <width>82</width>
+          <height>24</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>h2</string>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="alpnHttpCB">
+        <property name="geometry">
+         <rect>
+          <x>190</x>
+          <y>12</y>
+          <width>82</width>
+          <height>24</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>http/1.1</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QLabel" name="label_36">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>183</y>
+         <width>46</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>ShortId</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="shortIdTxt">
+       <property name="geometry">
+        <rect>
+         <x>153</x>
+         <y>183</y>
+         <width>401</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="toolTip">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;for reality&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_37">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>224</y>
+         <width>59</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>SpiderX</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="spiderXTxt">
+       <property name="geometry">
+        <rect>
+         <x>153</x>
+         <y>220</y>
+         <width>401</width>
+         <height>28</height>
+        </rect>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
      </widget>
      <widget class="QWidget" name="tab_2">
       <attribute name="title">
